# stocktrack_backend

./: pyproject.toml  render.yaml  requirements.txt
cashes/: admin.py  models.py  serializers.py  urls.py  views.py
cashes/migrations/: 0001_initial.py  0002_cashtransaction.py  0003_remove_cash_money.py  0004_alter_cash_category.py  0005_alter_cashtransaction_cash_name.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_categorytransaction.py  0003_categorytransaction_asset_categorytransaction_date.py  0004_alter_categorytransaction_category.py  0005_categorytransaction_realize_money_and_more.py  0006_category_classification.py  0007_categorytotal.py  0008_categorytotal_date.py  0009_rename_asset_categorytransaction_total_asset_and_more.py  0010_categoryupdatedate.py
config/: settings.py  urls.py
stocks/: admin.py  models.py  serializers.py  urls.py  views.py
stocks/migrations/: 0001_initial.py  0002_stocktransaction.py  0003_alter_stock_category_alter_stocktransaction_stock.py  0004_stocktransaction_total_amount_and_more.py  0005_stocktransaction_market_price.py  0006_alter_stocktransaction_price.py  0007_stocktransaction_realize_money.py  0008_stocktransaction_owner.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_name_alter_user_first_name_alter_user_last_name.py  0003_alter_user_first_name_alter_user_last_name.py  0004_alter_user_first_name_alter_user_last_name.py
